tests/ui/resolve/resolve-dont-hint-macro.rs
fn main() {
    let zero = assert_eq::<()>();
    //~^ ERROR expected function, found macro `assert_eq`
}
